--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,17 @@
 asgiref==3.4.1
+attrs==22.2.0
 Django==3.2.16
 django-rest-framework==0.1.0
 djangorestframework==3.14.0
+drf-spectacular==0.25.1
+importlib-metadata==4.8.3
+inflection==0.5.1
+jsonschema==4.0.0
 pkg-resources==0.0.0
+pyrsistent==0.18.0
 pytz==2022.7
+PyYAML==6.0
 sqlparse==0.4.3
 typing-extensions==4.1.1
+uritemplate==4.1.1
+zipp==3.6.0
