--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.4.1
 attrs==22.2.0
 Django==3.2.16
+django-filter==21.1
 django-rest-framework==0.1.0
 djangorestframework==3.14.0
 drf-spectacular==0.25.1
